// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-XhUvE gQIgJJ sc-ikPAEB ezDhAl"
      color="#fff"
    >
      <div
        class="sc-dtTHTy RdEck"
      >
        10
        %
      </div>
      <div
        class="sc-fHuLxr PSxNn"
        style="width: 10%;"
      >
        <div
          class="sc-dkIXZx knbprl"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-XhUvE gQIgJJ sc-ikPAEB ezDhAl"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-dtTHTy RdEck"
      >
        10
        %
      </div>
      <div
        class="sc-fHuLxr dWPpCF"
        style="width: 10%;"
      >
        <div
          class="sc-dkIXZx knbprl"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-XhUvE flsdQ sc-ikPAEB ezDhAl"
      color="#fff"
    >
      <div
        class="sc-dtTHTy RdEck"
      >
        10
        %
      </div>
      <div
        class="sc-fHuLxr PSxNn"
        style="width: 10%;"
      >
        <div
          class="sc-dkIXZx knbprl"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
